<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_bg"
    tools:context=".AdministratorUser.AdministratorSignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:src="@drawable/admin"
            android:contentDescription="@string/admin_logo" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_administrator_user_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:counterTextColor="@color/black"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_administrator_user_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:text=""
                android:inputType="phone"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_administrator_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/black"
            app:counterTextColor="@color/black"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_administrator_user_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:text=""
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_administrator_user_Sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="30dp"
            android:theme="@style/ButtonTheme"
            android:textColor="@android:color/black"
            android:backgroundTint="@color/colorGreen"
            app:cornerRadius="10dp"/>


    </LinearLayout>

</RelativeLayout>